--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head><meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Test262 Web Runner</title>
+	<title>Hacky stuffs tester</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 	<script src="jszip.min.js"></script>
@@ -16,8 +16,10 @@
 	</div>
 	<div class="container">
 		<div class="page-header">
-			<h1>Test262 Web Runner</h1>
-			<p class="lead">Run the official <a href="https://github.com/tc39/test262">ECMAScript conformance tests</a> in your browser.</p>
+			<h1><s>Test262</s> <span style="color: red">Ugly JS-Hacks</span> Web Runner</h1>
+			<p class="lead">Test your weird code against the <a href="https://github.com/tc39/test262">ECMAScript conformance tests</a> in your browser.</p>
+                        <p><textarea id="weird-code" rows="10", cols="160" style="font-family: monospace; font-size: 8px;">// Weird code here:</textarea></p>
+                        <input id="use-corejs" type="checkbox"> My browser is retarded and needs core-js.</input>
 		</div>
 		<span id="buttons">
 			Load a .zip of <a href="https://github.com/tc39/test262.git">the Test262 repository</a> (e.g. <a href="https://api.github.com/repos/tc39/test262/zipball">this</a>):
